--- a/pccc/assets/styles/styles.css
+++ b/pccc/assets/styles/styles.css
@@ -7124,25 +7124,58 @@ body {
   color: #333;
   text-align: center;
 }
+body p {
+  font-family: 'Arial';
+  line-height: 20px;
+  color: #000;
+  font-size: 13px;
+}
+.left-banner-wrapper {
+  width: 140px;
+  position: absolute;
+  left: 20px;
+  top: 160px;
+}
+.left-banner-wrapper img {
+  width: 140px;
+  margin-bottom: 10px;
+}
+@media (max-width: 1360px) {
+  .left-banner-wrapper {
+    display: none;
+  }
+}
+.right-banner-wrapper {
+  width: 140px;
+  position: absolute;
+  right: 20px;
+  top: 160px;
+}
+.right-banner-wrapper img {
+  width: 140px;
+  margin-bottom: 10px;
+}
+@media (max-width: 1360px) {
+  .right-banner-wrapper {
+    display: none;
+  }
+}
 /* ---------------------------------------
     SCROLL TOP
 ----------------------------------------- */
 .scrollToTop {
   display: none;
   position: fixed;
-  right: 50px;
+  right: 70px;
   bottom: 50px;
   margin: 0;
   z-index: 9999;
-}
-.scrollToTop a {
-  color: #ff0000;
-  font-weight: bold;
-  font-size: 11px;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding-top: 35px;
-  background: url('../images/totop.png') center top no-repeat;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  background-image: url(../images/scrolltop.png);
+  background-repeat: no-repeat;
+  background-size: 50px;
 }
 /* ---------------------------------------
     TOP BANNER
@@ -7175,6 +7208,7 @@ body {
   border-radius: 0;
   min-height: auto;
   background-color: #F90000;
+  z-index: 999 !important;
 }
 @media (min-width: 1200px) {
   .main-menu .custom-nav .container-fluid {
@@ -7484,6 +7518,7 @@ body {
 }
 .content-wrapper .right-content {
   padding-right: 0;
+  right: -1px;
 }
 @media (max-width: 860px) {
   .content-wrapper .right-content {
@@ -7728,85 +7763,104 @@ body {
 /* ---------------------------------------
     NEWS AND EVENTS PAGE
 ----------------------------------------- */
-.content-wrapper.news-and-events-page .main-content .box {
+.content-wrapper.news-and-events-page .main-content .box,
+.content-wrapper.knowledge-page .main-content .box {
   border: none;
   margin-bottom: 0;
 }
-.content-wrapper.news-and-events-page .main-content .box .panel-heading {
+.content-wrapper.news-and-events-page .main-content .box .panel-heading,
+.content-wrapper.knowledge-page .main-content .box .panel-heading {
   border: none;
   background-color: #dd0000;
   height: 38px;
 }
-.content-wrapper.news-and-events-page .main-content .box .panel-heading .box-header {
+.content-wrapper.news-and-events-page .main-content .box .panel-heading .box-header,
+.content-wrapper.knowledge-page .main-content .box .panel-heading .box-header {
   color: #fff;
   text-align: left;
   font-size: 14px;
   font-weight: 700;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content {
+.content-wrapper.news-and-events-page .main-content .box .box-content,
+.content-wrapper.knowledge-page .main-content .box .box-content {
   border: 1px solid #ddd;
   border-top: none;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item {
   padding-bottom: 10px;
   border-bottom: 1px solid #d6d6d6;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .left-content img {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .left-content img,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item .left-content img {
   width: 100%;
   padding-top: 12px;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .right-content {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .right-content,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item .right-content {
   text-align: left;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .right-content .title h5 {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .right-content .title h5,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item .right-content .title h5 {
   color: #000;
   font-weight: 600;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .right-content .date {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .right-content .date,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item .right-content .date {
   font-style: italic;
   color: #000;
   font-size: 13px;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .right-content .content {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .right-content .content,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item .right-content .content {
   color: #000;
   font-size: 13px;
   font-family: 'Arial';
   margin-top: 10px;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .read-more {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .read-more,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item .read-more {
   text-align: left;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .read-more a {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .read-more a,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item .read-more a {
   color: #ff0000;
   font-size: 13px;
   font-style: italic;
   padding-left: 10px;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .read-more a .fa {
+.content-wrapper.news-and-events-page .main-content .box .box-content .list-item .item .read-more a .fa,
+.content-wrapper.knowledge-page .main-content .box .box-content .list-item .item .read-more a .fa {
   font-size: 10px;
   padding-left: 5px;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .pagination {
+.content-wrapper.news-and-events-page .main-content .box .box-content .pagination,
+.content-wrapper.knowledge-page .main-content .box .box-content .pagination {
   margin: 15px 0;
   float: right;
 }
 .content-wrapper.news-and-events-page .main-content .box .box-content .pagination li a,
-.content-wrapper.news-and-events-page .main-content .box .box-content .pagination li span {
+.content-wrapper.knowledge-page .main-content .box .box-content .pagination li a,
+.content-wrapper.news-and-events-page .main-content .box .box-content .pagination li span,
+.content-wrapper.knowledge-page .main-content .box .box-content .pagination li span {
   border-radius: 50%;
   margin: 0 5px;
   color: #6b6b6b;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .pagination li.active a {
+.content-wrapper.news-and-events-page .main-content .box .box-content .pagination li.active a,
+.content-wrapper.knowledge-page .main-content .box .box-content .pagination li.active a {
   background-color: #dd0000;
   border-color: #dd0000;
   color: #FFF;
 }
-.content-wrapper.news-and-events-page .main-content .box .box-content .pagination li:hover a {
+.content-wrapper.news-and-events-page .main-content .box .box-content .pagination li:hover a,
+.content-wrapper.knowledge-page .main-content .box .box-content .pagination li:hover a {
   background-color: #dd0000;
   border-color: #dd0000;
   color: #FFF;
 }
-.content-wrapper.news-and-events-page .right-content .box-video {
+.content-wrapper.news-and-events-page .right-content .box-video,
+.content-wrapper.knowledge-page .right-content .box-video {
   padding-top: 0;
 }
 /* ---------------------------------------
