--- a/pccc/assets/less/main.less
+++ b/pccc/assets/less/main.less
@@ -154,6 +154,9 @@ body {
         top: 0;
         left: -160px;
         z-index: 999;
+        @media (max-width: 1360px) {
+            display: none;
+        }
         img {
             max-width: 100%;
             margin-bottom: 10px;
@@ -165,6 +168,9 @@ body {
         top: 0;
         right: -160px;
         z-index: 999;
+        @media (max-width: 1360px) {
+            display: none;
+        }
         img {
             max-width: 100%;
             margin-bottom: 10px;
@@ -482,6 +488,7 @@ body {
         @media (max-width: 860px) {
             padding-left: 0;
             padding-top: 10px;
+            right: 0;
         }
         .box-inform {
             .box {
