--- a/pccc/assets/less/main.less
+++ b/pccc/assets/less/main.less
@@ -599,11 +599,13 @@ body {
             border-radius: 4px;
             .tile {
                 padding-top: 10px;
+                color: #ffea00;
             }
             .number {
                 font-size: 35px;
                 line-height: 44px;
                 margin-bottom: 0;
+                color: #ffea00;
             }
         }
         .box-link-site {
