--- a/pccc/assets/less/main.less
+++ b/pccc/assets/less/main.less
@@ -61,12 +61,12 @@ body {
 ----------------------------------------- */
 .top-banner {
     height: 160px;
-    embed {
-        width: 100%;
-        height: 100%;
-    }
     @media (max-width: 858px) {
         display: none;
+    }
+    object {
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -146,10 +146,10 @@ body {
                             }
                         }
                         a {
-                            padding: 0 5px;
+                            padding: 0 4px;
                             line-height: 38px;
                             font-weight: 600;
-                            font-size: 10.5px;
+                            font-size: 11px;
                             text-align: left;
                             color: #fff;
                             &.uppercase {
