--- a/pccc/assets/styles/styles.css
+++ b/pccc/assets/styles/styles.css
@@ -7153,14 +7153,14 @@ body p {
 .top-banner {
   height: 160px;
 }
-.top-banner embed {
-  width: 100%;
-  height: 100%;
-}
 @media (max-width: 858px) {
   .top-banner {
     display: none;
   }
+}
+.top-banner object {
+  width: 100%;
+  height: 100%;
 }
 /* ---------------------------------------
     MAIN MENU
@@ -7217,10 +7217,10 @@ body p {
   background-color: #F90000 !important;
 }
 .main-menu .custom-nav .container-fluid .navbar-collapse ul li a {
-  padding: 0 5px;
+  padding: 0 4px;
   line-height: 38px;
   font-weight: 600;
-  font-size: 10.5px;
+  font-size: 11px;
   text-align: left;
   color: #fff;
 }
