Fix issues Towdeli

--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -1082,6 +1082,12 @@ header.header {
             input {
                 padding-left: 30px !important;
             }
+            span {
+                .fa-mobile {
+                    font-size: 28px;
+                    color: #939393;
+                }
+            }
         }
         input[type="text"], input[type="email"], input[type="password"] {
             border: 1px solid #999;
