--- a/example-react/src/components/campaigns-table/campaigns-table.less
+++ b/example-react/src/components/campaigns-table/campaigns-table.less
@@ -3,4 +3,10 @@
 	.table-cam {
 		background-color: red;
 	}
+	.table-footer {
+		text-align: center;
+    	border-top: 1px solid rgb(224, 224, 224);
+    	.pagination {
+    	}
+	}
 }
