--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -2809,9 +2809,17 @@ header.header {
             @media (max-width: 860px) {
                 margin-top: 10px;
             }
+            .img {
+                @media (max-width: 768px) {
+                    display: none;
+                }
+            }
             .body {
                 @media (max-width: 860px) {
                     margin-top: 15px;
+                }
+                @media (max-width: 768px) {
+                    width: 100%;
                 }
                 .quickview-header {
                     position: relative;
