--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -4101,13 +4101,17 @@ header.header {
                                     font-size: 12px;
                                     padding: 3px 7px;
                                     border-radius: 50%;
+                                    background-color: gray;
                                     color: white;
-                                    background-color: #27b99b;
+                                    font-style: normal;
                                 }
                                 &.active {
                                     a {
                                         color: #02b691 !important;
-                                    }  
+                                    }
+                                    i {
+                                        background-color: #27b99b;
+                                    }
                                 }
                             }
                         }
@@ -4868,6 +4872,35 @@ header.header {
                         display: inline-block;
                         padding: 7px 14px;
                         transition-duration: 0.1s;
+                    }
+                    &.has-chil {
+                        ul {
+                            li {
+                                a {
+                                    border-left: none;
+                                    padding-left: 22px;
+                                    font-size: 18px;
+                                    font-weight: 500;
+                                    padding-right: 10px;
+                                }
+                                i {
+                                    font-size: 12px;
+                                    padding: 3px 7px;
+                                    border-radius: 50%;
+                                    background-color: gray;
+                                    color: white;
+                                    font-style: normal;
+                                }
+                                &.active {
+                                    a {
+                                        color: #02b691 !important;
+                                    }
+                                    i {
+                                        background-color: #27b99b;
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
