--- a/pccc/assets/less/main.less
+++ b/pccc/assets/less/main.less
@@ -160,7 +160,7 @@ body {
               }
             }
             a {
-              padding: 0 6px;
+              padding: 0 5px;
               line-height: 38px;
               font-weight: 600;
               font-size: 11px;
@@ -349,8 +349,11 @@ body {
       .banner {
         padding-left: 0;
         padding-right: 0;
+        a {
+          width: 100%;
+        }
         img {
-          width: inherit;
+          width: 100%;
         }
       }
     }
@@ -1421,9 +1424,13 @@ SEARCH RESULT PAGE
 
 .main-menu .custom-nav .container-fluid .navbar-collapse {
   .navbar-nav {
+    float: initial;
+    font-size: 0;
     li {
       list-style: none;
       position: relative;
+      float: initial;
+      display: inline-block;
       a {
         text-transform: uppercase;
         display: block;
