--- a/pccc/assets/less/main.less
+++ b/pccc/assets/less/main.less
@@ -89,6 +89,10 @@ body {
 ----------------------------------------- */
 .main-menu {
   position: relative;
+  .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
+    background-color: transparent !important;
+    border-color: transparent !important;
+  }
   .nav {
     li {
       a {
@@ -110,6 +114,16 @@ body {
     background-color: #F90000;
     z-index: 999 !important;
     .container-fluid {
+      @media (min-width: 860px) {
+        .navbar-nav {
+          float: initial;
+          font-size: 0;
+        }
+        .navbar-nav > li {
+          float: initial;
+          display: inline-block;
+        }
+      }
       @media (min-width: 1200px) {
         padding: 0;
       }
@@ -127,9 +141,21 @@ body {
         }
 
         ul {
-          @media (min-width: 860px) {
-            li {
-              &.dropdown {
+          // @media (min-width: 860px) {
+          //   li {
+          //     &.dropdown {
+          //       &:hover {
+          //         ul {
+          //           &.dropdown-menu {
+          //             display: block;
+          //           }
+          //         }
+          //       }
+          //     }
+          //   }
+          // }
+          li {
+            &.dropdown {
                 &:hover {
                   ul {
                     &.dropdown-menu {
@@ -138,9 +164,6 @@ body {
                   }
                 }
               }
-            }
-          }
-          li {
             &.active {
               a {
                 color: #fee900 !important;
@@ -296,7 +319,7 @@ body {
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -561,7 +584,7 @@ body {
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -620,7 +643,7 @@ body {
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -688,7 +711,7 @@ body {
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -718,7 +741,7 @@ body {
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -754,6 +777,9 @@ body {
     padding: 8px;
     font-size: 14px;
     font-weight: 700;
+    a {
+      color: #FFF;
+    }
   }
   .ms-staff-carousel {
     max-width: 100%;
@@ -800,7 +826,7 @@ body {
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -850,7 +876,7 @@ body {
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -934,7 +960,7 @@ body {
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -1035,7 +1061,7 @@ ADMINISTRATIVE PROCEEDS PAGE
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -1131,7 +1157,7 @@ IMAGES GALLERY PAGE
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -1152,11 +1178,6 @@ IMAGES GALLERY PAGE
           }
 
         }
-      }
-    }
-    .right-content {
-      .box-video {
-        padding-top: 0;
       }
     }
   }
@@ -1183,7 +1204,7 @@ CONTACT PAGE
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -1244,7 +1265,7 @@ DETAIL PAGE
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -1347,7 +1368,7 @@ SEARCH RESULT PAGE
             font-size: 14px;
             line-height: 1.3;
             font-weight: 700;
-            padding-top: 6px;
+            padding: 6px 0;
           }
         }
         .box-content {
@@ -1422,46 +1443,47 @@ SEARCH RESULT PAGE
 
 }
 
-.main-menu .custom-nav .container-fluid .navbar-collapse {
-  .navbar-nav {
-    float: initial;
-    font-size: 0;
-    li {
-      list-style: none;
-      position: relative;
-      float: initial;
-      display: inline-block;
-      a {
-        text-transform: uppercase;
-        display: block;
-        white-space: nowrap;
-      }
-      &.current-menu-item {
-        a {
-          color: #fee900;
-        }
-      }
-      &:hover {
-        .sub-menu {
-          top: 100%;
-          display: block;
-          opacity: 1;
-        }
-      }
-    }
-    .sub-menu {
-      position: absolute;
-      top: -100%;
-      left: 0;
-      z-index: 9999;
-      background: red;
-      display: none;
-      opacity: 0;
-      li {
-        a {
-          text-transform: none;
-        }
-      }
-    }
-  }
-}
+// .main-menu .custom-nav .container-fluid .navbar-collapse {
+//   .navbar-nav {
+//     // float: initial;
+//     // font-size: 0;
+//     li {
+//       list-style: none;
+//       position: relative;
+//       // float: initial;
+//       // display: inline-block;
+//       a {
+//         text-transform: uppercase;
+//         display: block;
+//         white-space: nowrap;
+//       }
+//       &.current-menu-item {
+//         a {
+//           color: #fee900;
+//         }
+//       }
+//       &:hover {
+//         .sub-menu {
+//           top: 100%;
+//           display: block;
+//           opacity: 1;
+//         }
+//       }
+//     }
+//     .sub-menu {
+//       position: absolute;
+//       top: -100%;
+//       left: 0;
+//       z-index: 9999;
+//       background: red;
+//       display: none;
+//       opacity: 0;
+//       li {
+//         a {
+//           text-transform: none;
+//         }
+//       }
+//     }
+//   }
+// }
+
