--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -2384,6 +2384,7 @@ header.header {
     p {
         font-size: 24px;
         line-height: 1.2;
+        margin: 0 35px;
         @media (max-width: @screen-md-max) {
             font-size: 22px;
             line-height: 1.3;
@@ -2533,11 +2534,15 @@ header.header {
     .get-email {
         float: right;
         padding-top: 7px;
+        .row {
+            div {
+                text-align: center;
+            }
+        }
         @media (max-width: @screen-xs-max) {
             float: initial;
         }
         label {
-            float: left;
             font-size: 13px;
             font-weight: normal;
             margin: 6px 10px 0 0;
@@ -2548,16 +2553,15 @@ header.header {
         input[type="email"] {
             border: 1px solid #ccc;
             border-radius: 4px;
-            float: left;
             font-size: 13px;
             height: 30px;
             margin-right: 10px;
             padding: 0 10px;
-            width: 300px;
+            width: 100%;
             @media (max-width: @screen-xs-max) {
                 height: 30px;
                 margin-right: 5px;
-                width: ~"calc(100% - 235px)";
+                // width: ~"calc(100% - 235px)";
             }
         }
         .submit-btn {
@@ -2565,11 +2569,10 @@ header.header {
             border: none;
             border-radius: 4px;
             color: #fff;
-            float: left;
             font-weight: 700;
             height: 30px;
             letter-spacing: 2px;
-            padding: 0 30px;
+            padding: 7px;
             text-transform: uppercase;
             @media (max-width: @screen-xs-max) {
                 font-size: 11px;
