--- a/example-react/src/App.css
+++ b/example-react/src/App.css
@@ -1,3 +1,19 @@
 .top-nav {
 	height: 64px;
 }
+
+.paper-title {
+	padding-bottom: .3em;
+    font-size: 1em;
+    line-height: 1.334;
+    border-bottom: 1px solid #eee;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.card-title {
+    font-size: 1em;
+    line-height: 1.334;
+}
+.step-content {
+	margin: 15px;
+}
