--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -24,18 +24,19 @@
     BODY
 ----------------------------------------- */
 body {
-  font-family: Verdana, Geneva, sans-serif;
-  font-size: 12px;
-  line-height: 1.5em;
-  color: #333;
-  text-align: center;
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 12px;
+    line-height: 1.5em;
+    color: #333;
+    text-align: center;
+    transition: background-color .5s;
 }
 
-#fullpage {
-    .section-1{
-        background:url("../images/bg1.jpg") center top no-repeat; 
+#projectPage {
+    .section-1 {
+        background: url("../images/bg1.jpg") center top no-repeat;
         background-size: cover;
-        
+
         .scroll-icon {
             position: absolute;
             width: 100%;
@@ -51,39 +52,98 @@ body {
             }
         }
     }
-    
+
     .section-2 {
         .fp-tableCell {
             vertical-align: top;
         }
-        .nav-wrapper {
-            background-color: #FFF;
-            .brand-logo {
+
+    }
+}
+
+.top-nav {
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    height: 60px;
+    background-color: #fff;
+    .nav-wrapper {
+        position: relative;
+        background-color: #FFF;
+        .brand-logo {
+            color: black;
+        }
+
+        .left-content {
+            position: absolute;
+            left: 30px;
+            .menu-icon {
                 color: black;
             }
-
-            .left-content {
+            .title {
+                color: black;
                 position: absolute;
-                left: 30px;
-                .menu-icon {
-                    color: black;
-                }
-                .title {
-                    color: black;
-                    position: absolute;
-                    top: 0;
-                    left: 40px;
-                }
+                top: 0;
+                left: 40px;
             }
+        }
 
-            .right-content {
-                position: absolute;
-                right: 30px;
-                a {
-                    color: black;
-                    padding-left: 10px;
+        .right-content {
+            position: absolute;
+            right: 30px;
+            a {
+                color: black;
+                padding-left: 10px;
+            }
+        }
+    }
+}
+
+@color_1: #000000;
+@color_2: rgba(51, 51, 51, 0.66);
+@background_color_1: #fff;
+
+.main-sile-nav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    background-color: @background_color_1;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 20px;
+    text-align: left;
+    a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: @color_1;
+        display: block;
+        transition: 0.3s;
+        &:hover {
+            color: @color_2;
+        }
+    }
+}
+
+.main-content {
+    transition: margin-left .5s;
+    margin-top: 60px;
+}
+
+.grid-gallery {
+    ul {
+        li {
+            a {
+                h4 {
+                    position: absolute;
+                    top: 50%;
+                    left: 40%;
+                    color: #ffffff;
                 }
             }
         }
     }
 }
+
