--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -32,35 +32,6 @@ body {
     transition: background-color .5s;
 }
 
-#projectPage {
-    .section-1 {
-        background: url("../images/bg1.jpg") center top no-repeat;
-        background-size: cover;
-
-        .scroll-icon {
-            position: absolute;
-            width: 100%;
-            bottom: 0;
-            span {
-                display: block;
-                font-size: 16px;
-                color: rgba(0, 0, 0, 0.75);
-                cursor: pointer;
-                i {
-                    font-size: 36px;
-                }
-            }
-        }
-    }
-
-    .section-2 {
-        .fp-tableCell {
-            vertical-align: top;
-        }
-
-    }
-}
-
 .top-nav {
     position: fixed;
     top: 0;
@@ -99,48 +70,79 @@ body {
     }
 }
 
-@color_1: #000000;
-@color_2: rgba(51, 51, 51, 0.66);
-@background_color_1: #fff;
+.main-content {
+    transition: margin-left .5s;
+    margin-top: 60px;
 
-.main-sile-nav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    background-color: @background_color_1;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 20px;
-    text-align: left;
-    a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: @color_1;
-        display: block;
-        transition: 0.3s;
-        &:hover {
-            color: @color_2;
+    @color_1: #000000;
+    @color_2: rgba(51, 51, 51, 0.66);
+    @background_color_1: #fff;
+
+    .main-sile-nav {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        background-color: @background_color_1;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 20px;
+        text-align: left;
+        a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: @color_1;
+            display: block;
+            transition: 0.3s;
+            &:hover {
+                color: @color_2;
+            }
         }
     }
 }
 
-.main-content {
-    transition: margin-left .5s;
-    margin-top: 60px;
+#homePage {
+    .section-1 {
+        background: url("../images/bg1.jpg") center top no-repeat;
+        background-size: cover;
+
+        .scroll-icon {
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+            span {
+                display: block;
+                font-size: 16px;
+                color: rgba(0, 0, 0, 0.75);
+                cursor: pointer;
+                i {
+                    font-size: 36px;
+                }
+            }
+        }
+    }
+
+    .section-2 {
+        .fp-tableCell {
+            vertical-align: top;
+        }
+
+    }
 }
 
-.grid-gallery {
-    ul {
-        li {
-            a {
-                h4 {
-                    position: absolute;
-                    top: 50%;
-                    left: 40%;
-                    color: #ffffff;
+#projectsPage {
+    .grid-gallery {
+        ul {
+            li {
+                a {
+                    h4 {
+                        position: absolute;
+                        top: 50%;
+                        left: 40%;
+                        color: #ffffff;
+                    }
                 }
             }
         }
