--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -6716,27 +6716,6 @@ body {
   text-align: center;
   transition: background-color 0.5s;
 }
-#projectPage .section-1 {
-  background: url("../images/bg1.jpg") center top no-repeat;
-  background-size: cover;
-}
-#projectPage .section-1 .scroll-icon {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-}
-#projectPage .section-1 .scroll-icon span {
-  display: block;
-  font-size: 16px;
-  color: rgba(0, 0, 0, 0.75);
-  cursor: pointer;
-}
-#projectPage .section-1 .scroll-icon span i {
-  font-size: 36px;
-}
-#projectPage .section-2 .fp-tableCell {
-  vertical-align: top;
-}
 .top-nav {
   position: fixed;
   top: 0;
@@ -6772,7 +6751,11 @@ body {
   color: black;
   padding-left: 10px;
 }
-.main-sile-nav {
+.main-content {
+  transition: margin-left 0.5s;
+  margin-top: 60px;
+}
+.main-content .main-sile-nav {
   height: 100%;
   width: 0;
   position: fixed;
@@ -6784,7 +6767,7 @@ body {
   padding-top: 20px;
   text-align: left;
 }
-.main-sile-nav a {
+.main-content .main-sile-nav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -6792,14 +6775,31 @@ body {
   display: block;
   transition: 0.3s;
 }
-.main-sile-nav a:hover {
+.main-content .main-sile-nav a:hover {
   color: rgba(51, 51, 51, 0.66);
 }
-.main-content {
-  transition: margin-left 0.5s;
-  margin-top: 60px;
+#homePage .section-1 {
+  background: url("../images/bg1.jpg") center top no-repeat;
+  background-size: cover;
 }
-.grid-gallery ul li a h4 {
+#homePage .section-1 .scroll-icon {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+#homePage .section-1 .scroll-icon span {
+  display: block;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+}
+#homePage .section-1 .scroll-icon span i {
+  font-size: 36px;
+}
+#homePage .section-2 .fp-tableCell {
+  vertical-align: top;
+}
+#projectsPage .grid-gallery ul li a h4 {
   position: absolute;
   top: 50%;
   left: 40%;
