--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -217,20 +217,25 @@ body {
                 transition: .3s ease-in-out!important;
             }
         }
-        .ug-textpanel-title {
-            .cus-description {
-                outline: 0!important;
-                transition: color 1s ease!important;
-                &:after, &:before {
-                    outline: 0;
-                    background-color: #ffffff;
-                    transition: all 1s ease;
-                    content: "";
-                    position: absolute;
-                    width: 100%;
-                    height: 3px;
-                    left: 0;
-                    top: 20px;
+        .ug-textpanel {
+            @media (max-width: 992px) {
+                opacity: 1!important;
+            }
+            .ug-textpanel-title {
+                .cus-description {
+                    outline: 0 !important;
+                    transition: color 1s ease !important;
+                    &:after, &:before {
+                        outline: 0;
+                        background-color: #ffffff;
+                        transition: all 1s ease;
+                        content: "";
+                        position: absolute;
+                        width: 100%;
+                        height: 3px;
+                        left: 0;
+                        top: 20px;
+                    }
                 }
             }
         }
