--- a/setfilhome/assets/less/styles.less
+++ b/setfilhome/assets/less/styles.less
@@ -9,7 +9,7 @@
 /*---------------------------------------
   FONTS
 -----------------------------------------*/
-// @import "utilities/fonts.less";
+ @import "utilities/fonts.less";
 /* ---------------------------------------
 GENERAL STYLES
 ----------------------------------------- */
